--- a/teste/CanvasManifest.json
+++ b/teste/CanvasManifest.json
@@ -57,7 +57,7 @@
       "improvedtabstopbehavior": false,
       "keeprecentscreensloaded": false,
       "longlivingcache": false,
-      "namedformulas": false,
+      "namedformulas": true,
       "nativecdsexperimental": true,
       "optimizedforteamsmeeting": false,
       "parallelcodegen": false,
@@ -67,7 +67,7 @@
       "reverttooldpowerautomate": false,
       "rtlinstudiopreview": false,
       "rtlsupport": false,
-      "untypedobject": false,
+      "untypedobject": true,
       "usedisplaynamemetadata": true,
       "useenforcesavedatalimits": true,
       "useexperimentalcdsconnector": true,
