--- a/teste/Src/Screen2.fx.yaml
+++ b/teste/Src/Screen2.fx.yaml
@@ -74,8 +74,17 @@
                     DisplayFields: =["Nome"]
                     DisplayMode: =Parent.DisplayMode
                     IsSearchable: =false
-                    Items: =produtos
-                    OnChange: =Collect(produtosSelecionados, Self.SelectedItems)
+                    Items: |
+                        =produtos
+                        //Filter(produtos, Not(Id in produtosSelecionados.itemProduto.Id))
+                        //produtosSelecionados.itemProduto
+                        //Gallery1.Selected exactin SavedItems
+                        //Gallery1.AllItems.itemProduto
+                    OnChange: |-
+                        =Clear(produtosSelecionados);
+                        ForAll(Gallery1.AllItems, Collect(produtosSelecionados, {Id: itemProduto.SelectedItems.Id}))
+                        //ClearCollect(produtosSelecionados, Gallery1.AllItems.itemProduto)
+                        //ForAll(MyGallery.AllItems; Collect ( myCollection; FieldA.Text; FieldB.Text ) )
                     PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
                     SearchFields: =["Nome"]
                     SearchItems: =[]
@@ -117,6 +126,68 @@
                     X: =headerResultadoContato.X
                     ZIndex: =3
 
+    "Gallery2 As gallery.'BrowseLayout_Vertical_TwoTextVariant_ver4.0'":
+        Height: =447
+        Items: =produtosSelecionados
+        Layout: =Layout.Vertical
+        TemplatePadding: =0
+        TemplateSize: =Min(104, Self.Height - 60)
+        Width: =403
+        X: =720
+        Y: =225
+        ZIndex: =1
+
+        Title2 As label:
+            Height: =Self.Size * 1.8
+            OnSelect: =Select(Parent)
+            PaddingBottom: =0
+            PaddingLeft: =0
+            PaddingRight: =0
+            PaddingTop: =0
+            Text: =ThisItem.Value
+            VerticalAlign: =VerticalAlign.Top
+            Width: =Parent.TemplateWidth - 104
+            X: =32
+            Y: =16
+            ZIndex: =1
+
+        Subtitle2 As label:
+            Height: =Self.Size * 1.8
+            OnSelect: =Select(Parent)
+            PaddingBottom: =0
+            PaddingLeft: =0
+            PaddingRight: =0
+            PaddingTop: =0
+            Text: =ThisItem.Value
+            VerticalAlign: =VerticalAlign.Top
+            Width: =Parent.TemplateWidth - 104
+            X: =32
+            Y: =Title2.Y + Title2.Height + 4
+            ZIndex: =2
+
+        NextArrow2 As icon.ChevronRight:
+            AccessibleLabel: =Self.Tooltip
+            Height: =60
+            Icon: =Icon.ChevronRight
+            OnSelect: =Select(Parent)
+            PaddingBottom: =10
+            PaddingLeft: =10
+            PaddingRight: =10
+            PaddingTop: =10
+            TabIndex: =0
+            Tooltip: ="View item details"
+            Width: =60
+            X: =Parent.TemplateWidth - Self.Width - 5
+            Y: =(Parent.TemplateHeight / 2) - (Self.Height / 2)
+            ZIndex: =3
+
+        Separator2 As rectangle:
+            Height: =1
+            OnSelect: =Select(Parent)
+            Width: =Parent.TemplateWidth
+            Y: =Parent.TemplateHeight - 1
+            ZIndex: =4
+
     Button1 As button:
         OnSelect: |-
             =ClearCollect(produtos, 
@@ -148,4 +219,10 @@
         X: =20
         Y: =20
         ZIndex: =2
+
+    TextInput3 As text:
+        Default: =
+        X: =140
+        Y: =555
+        ZIndex: =3
 
