--- a/teste/Src/Screen2.fx.yaml
+++ b/teste/Src/Screen2.fx.yaml
@@ -1,4 +1,5 @@
 "Screen2 As screen.'tabletAutoLayout_HeaderMainFooter_ver1.0'":
+    OnVisible: =
 
     ScreenContainer1 As groupContainer.verticalAutoLayoutContainer:
         Height: =Parent.Height
@@ -76,13 +77,15 @@
                     IsSearchable: =false
                     Items: |
                         =produtos
+                        //Filter(produtos, LookUp(produtosSelecionados, Id))
+                        //Filter(produtos, Not(Id in produtosSelecionados.Value))
                         //Filter(produtos, Not(Id in produtosSelecionados.itemProduto.Id))
                         //produtosSelecionados.itemProduto
                         //Gallery1.Selected exactin SavedItems
                         //Gallery1.AllItems.itemProduto
                     OnChange: |-
                         =Clear(produtosSelecionados);
-                        ForAll(Gallery1.AllItems, Collect(produtosSelecionados, {Id: itemProduto.SelectedItems.Id}))
+                        ForAll(Gallery1.AllItems, Collect(produtosSelecionados, {prod: itemProduto.SelectedItems}))
                         //ClearCollect(produtosSelecionados, Gallery1.AllItems.itemProduto)
                         //ForAll(MyGallery.AllItems; Collect ( myCollection; FieldA.Text; FieldB.Text ) )
                     PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
@@ -126,46 +129,44 @@
                     X: =headerResultadoContato.X
                     ZIndex: =3
 
-    "Gallery2 As gallery.'BrowseLayout_Vertical_TwoTextVariant_ver4.0'":
-        Height: =447
-        Items: =produtosSelecionados
+    "Gallery3 As gallery.'BrowseLayout_Vertical_TwoTextVariant_ver4.0'":
+        Items: =produtosSelecionados.prod
         Layout: =Layout.Vertical
         TemplatePadding: =0
         TemplateSize: =Min(104, Self.Height - 60)
-        Width: =403
-        X: =720
-        Y: =225
+        X: =726
+        Y: =193
         ZIndex: =1
 
-        Title2 As label:
+        Title4 As label:
             Height: =Self.Size * 1.8
             OnSelect: =Select(Parent)
             PaddingBottom: =0
             PaddingLeft: =0
             PaddingRight: =0
             PaddingTop: =0
-            Text: =ThisItem.Value
+            Text: =ThisItem.prod.Nome
             VerticalAlign: =VerticalAlign.Top
             Width: =Parent.TemplateWidth - 104
             X: =32
             Y: =16
             ZIndex: =1
 
-        Subtitle2 As label:
+        Subtitle4 As label:
             Height: =Self.Size * 1.8
             OnSelect: =Select(Parent)
             PaddingBottom: =0
             PaddingLeft: =0
             PaddingRight: =0
             PaddingTop: =0
-            Text: =ThisItem.Value
+            Text: ="Text"
             VerticalAlign: =VerticalAlign.Top
             Width: =Parent.TemplateWidth - 104
             X: =32
-            Y: =Title2.Y + Title2.Height + 4
+            Y: =Title4.Y + Title4.Height + 4
             ZIndex: =2
 
-        NextArrow2 As icon.ChevronRight:
+        NextArrow4 As icon.ChevronRight:
             AccessibleLabel: =Self.Tooltip
             Height: =60
             Icon: =Icon.ChevronRight
@@ -181,7 +182,7 @@
             Y: =(Parent.TemplateHeight / 2) - (Self.Height / 2)
             ZIndex: =3
 
-        Separator2 As rectangle:
+        Separator4 As rectangle:
             Height: =1
             OnSelect: =Select(Parent)
             Width: =Parent.TemplateWidth
@@ -219,10 +220,4 @@
         X: =20
         Y: =20
         ZIndex: =2
-
-    TextInput3 As text:
-        Default: =
-        X: =140
-        Y: =555
-        ZIndex: =3
 
